--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
     <title>Our Pets</title>
 </head>
 
@@ -11,7 +11,7 @@
     <header class="container">
         <div class="primerbarra">
             <div class="logoizquierda">
-                <img src="/Images/cheto.jpeg" alt="Logo">
+                <img src="./Images/cheto.jpg" alt="Logo">
             </div>
             <div class="links">
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About</a>
@@ -19,17 +19,17 @@
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Contact us</a>
             </div>
         </div>
-</header>
+    </header>
 
-<div class="hero">
-    <div class="hero-separacion">
-        <h1>Our Pets</h1>
-        <p class="textoheader1" >And their crimes committed over the years, as well as the sentences served.
-        </p>
+    <div class="hero">
+        <div class="hero-separacion">
+            <h1>Our Pets</h1>
+            <p class="textoheader1">And their crimes committed over the years, as well as the sentences served.
+            </p>
             <button type="button">Sign Up</button>
         </div>
         <div class="hero-1 hero-image">
-            <img src="/Images/amigos.jpg" alt="BestFriends">
+            <img src="./Images/amigos.jpg" alt="BestFriends">
         </div>
     </div>
 
@@ -37,25 +37,28 @@
         <h2 class="ourpetsmargin">Our Pets</h2>
         <div class="content-info">
             <div>
-                <img src="/Images/cheto.jpeg" alt="cheto">
+                <img src="./Images/cheto.jpg" alt="cheto">
                 <p class="textobajofotos"> This is my pet Cheto, she is aggressive and friendly at the same time, she
                     was detained in San
                     Quintin for 12 years, but now she is a free cat</p>
             </div>
             <div>
-                <img src="/Images/lolo.jpeg" alt="lolo">
-                <p class="textobajofotos">The next chunky criminal is lolo, Fernando's killer pet, he killed 5 people in his camaro, now he is
+                <img src="./Images/lolo.jpg" alt="lolo">
+                <p class="textobajofotos">The next chunky criminal is lolo, Fernando's killer pet, he killed 5 people in
+                    his camaro, now he is
                     a free and happy cat with no remorse for what he did.</p>
             </div>
             <div>
-                <img src="/Images/horchata.jpg" alt="horchata">
-                <p class="textobajofotos">the next pet, is the terror of his colony, with a height of 3 meters 25 cm, comes horchata, known for
+                <img src="./Images/horchata.jpg" alt="horchata">
+                <p class="textobajofotos">the next pet, is the terror of his colony, with a height of 3 meters 25 cm,
+                    comes horchata, known for
                     being the executor in the video named “la pantera” as well as others like “ghost rider mexicano” and
                     “miss pacman”, built with iron blood, served 35 years in the prison of apodaca.</p>
             </div>
             <div>
-                <img src="/Images/misha.jpeg" alt="misha">
-                <p class="textobajofotos">Now, our most beautiful pet, our first love, the perfect woman, who has the affection of the whole
+                <img src="./Images/misha.jpg" alt="misha">
+                <p class="textobajofotos">Now, our most beautiful pet, our first love, the perfect woman, who has the
+                    affection of the whole
                     world, Misha, the perfect pet, she gives the paw, she spins around, and her specialty, stalking
                     minors, she is so perfect. currently serving life in prison and is waiting for lethal injection.</p>
             </div>
@@ -70,10 +73,11 @@
     <div class="sign-up">
         <div class="sign-boton signs-texto">
             <h3>Call to action! it´s time!</h3>
-            <p >Sign up for una madriza gratis, clicking that button right over there</p>
+            <p>Sign up for una madriza gratis, clicking that button right over there</p>
         </div>
         <div class="boton-abajo">
-            <button type="button"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Sign Up </a></button>
+            <button type="button"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Sign Up
+                </a></button>
         </div>
     </div>
     <div class="footer">
